{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 12,
  "lineage": "017e1467-f410-bc95-1ef1-5440177bd7c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092ed3401d2945f83",
            "association_id": "eipassoc-0d2e39615f408caed",
            "domain": "vpc",
            "id": "eipalloc-092ed3401d2945f83",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08f2199f936bea5b4",
            "private_dns": "ip-192-168-0-24.ec2.internal",
            "private_ip": "192.168.0.24",
            "public_dns": "ec2-54-86-50-69.compute-1.amazonaws.com",
            "public_ip": "54.86.50.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nawaz-EIP"
            },
            "tags_all": {
              "Name": "Nawaz-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.my_network_interface",
            "aws_security_group.my_security_group",
            "aws_subnet.My-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:030823005391:instance/i-0c54775ebddcebe6b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c54775ebddcebe6b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Nawaz-Server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c58bfd6675c7baa",
            "private_dns": "ip-192-168-0-201.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.201",
            "public_ip": "34.228.242.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06811989c5f186845",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df424a379540ec4e",
            "tags": {
              "Name": "Nawaz-Ubuntu-Server"
            },
            "tags_all": {
              "Name": "Nawaz-Ubuntu-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dcdb4f6258442838"
            ]
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.My-subnet",
            "aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030823005391:internet-gateway/igw-0f67611f13239381d",
            "id": "igw-0f67611f13239381d",
            "owner_id": "030823005391",
            "tags": {
              "Name": "Nawaz-IGW"
            },
            "tags_all": {
              "Name": "Nawaz-IGW"
            },
            "vpc_id": "vpc-04de0528accb42337"
          },
          "dependencies": [
            "aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "my_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030823005391:network-interface/eni-08f2199f936bea5b4",
            "id": "eni-08f2199f936bea5b4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:cc:14:04:cd:7b",
            "owner_id": "030823005391",
            "private_ip": "192.168.0.24",
            "private_ip_list": [
              "192.168.0.24"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.0.24"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0dcdb4f6258442838"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df424a379540ec4e",
            "tags": {
              "Name": "Nawaz-network-interface"
            },
            "tags_all": {
              "Name": "Nawaz-network-interface"
            }
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.My-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "My-Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030823005391:route-table/rtb-096fe82e2da0e1ddf",
            "id": "rtb-096fe82e2da0e1ddf",
            "owner_id": "030823005391",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f67611f13239381d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nawaz-RT"
            },
            "tags_all": {
              "Name": "Nawaz-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04de0528accb42337"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.My-igw",
            "aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b193f1d67ae428b",
            "route_table_id": "rtb-096fe82e2da0e1ddf",
            "subnet_id": "subnet-0df424a379540ec4e"
          },
          "dependencies": [
            "aws_internet_gateway.My-igw",
            "aws_route_table.My-Route_Table",
            "aws_subnet.My-subnet",
            "aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030823005391:security-group/sg-0dcdb4f6258442838",
            "description": "Allow SSH, HTTP, and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcdb4f6258442838",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Nawaz-security-group",
            "name_prefix": "",
            "owner_id": "030823005391",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04de0528accb42337"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030823005391:subnet/subnet-0df424a379540ec4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df424a379540ec4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030823005391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nawaz-Subnet"
            },
            "tags_all": {
              "Name": "Nawaz-Subnet"
            },
            "vpc_id": "vpc-04de0528accb42337"
          },
          "dependencies": [
            "aws_vpc.My-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030823005391:vpc/vpc-04de0528accb42337",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0b285650d1549541e",
            "default_route_table_id": "rtb-0af3bfb69011828bb",
            "default_security_group_id": "sg-0506215f49b871c05",
            "dhcp_options_id": "dopt-0965b90018dd51c7c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04de0528accb42337",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af3bfb69011828bb",
            "owner_id": "030823005391",
            "tags": {
              "Name": "Nawaz-VPC"
            },
            "tags_all": {
              "Name": "Nawaz-VPC"
            }
          }
        }
      ]
    }
  ]
}